updates: Do not reboot if one of the update transactions failed

It gives the user the chance to see what went down.

BUG: 453250
(cherry picked from commit e6db01be70f6ce161aa3d7c525503f9db42954c6)